--- a/WpfApplication2/KDT.csproj
+++ b/WpfApplication2/KDT.csproj
@@ -15,8 +15,8 @@
     <WarningLevel>4</WarningLevel>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
-    <PublishUrl>\\10.193.101.112\shareserver\IDE_Software\COM_DEBUGGER\</PublishUrl>
-    <Install>false</Install>
+    <PublishUrl>\\10.193.102.47\shareserver\IDE_Software\COM_DEBUGGER\</PublishUrl>
+    <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
@@ -25,7 +25,6 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>\\10.193.101.112\shareserver\IDE_Software\COM_DEBUGGER\</InstallUrl>
     <TargetCulture>en</TargetCulture>
     <PublisherName>Haley</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
@@ -75,6 +74,9 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>WpfApplication2.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="IronPython, Version=2.7.0.40, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -118,7 +120,6 @@
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Page Include="OptionWindow.xaml">
       <SubType>Designer</SubType>
@@ -167,7 +168,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 和 x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
