--- a/WpfApplication2/bin/Comdebugger_V3.8/app_info.ini
+++ b/WpfApplication2/bin/Comdebugger_V3.8/app_info.ini
@@ -1,10 +1,10 @@
 [pattern]
-0 = CMP interrupt Example
-1 = HIGH_LED_OFF
-2 = LOW_LED_ON
+0 = (AFE\s*value\s*=\s*\d{7}[\s\S]*){2}
 
 [no_pattern]
-0 = Failed
+0 = error
+1 = fail
+2 = invalid
 
 [others]
 interact = 1
